refactoring a bit, adding tests to keep sanity

--- a/tests/NUnitTestGenerator.Tests/NUnitTestGenerator.Tests.csproj
+++ b/tests/NUnitTestGenerator.Tests/NUnitTestGenerator.Tests.csproj
@@ -16,4 +16,13 @@
     <ProjectReference Include="../../src/NUnitTestGenerator/NUnitTestGenerator.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Resources\GenerateMultipleNoParams.res">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\GenerateSingleNoParams.res">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
