fixing a bug where fixture attribute was spaced and not tabbed adding support for parameters in test adding some more tests

--- a/tests/NUnitTestGenerator.Tests/NUnitTestGenerator.Tests.csproj
+++ b/tests/NUnitTestGenerator.Tests/NUnitTestGenerator.Tests.csproj
@@ -20,7 +20,16 @@
     <None Update="Resources\GenerateMultipleNoParams.res">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\GenerateMultipleWithSingleParam.res">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\GenerateSingleNoParams.res">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\GenerateSingleWithMultipleParams.res">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Resources\GenerateSingleWithSingleParam.res">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
