--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/NUnitTestGenerator/bin/Debug/net5.0/NUnitTestGenerator.dll",
+            "program": "${workspaceFolder}/src/Runner/bin/Debug/net5.0/Runner.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/src/NUnitTestGenerator",
+            "cwd": "${workspaceFolder}/src/Runner",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
