--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,9 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     
+    - name: Install report generator
+      run: dotnet tool install -g dotnet-reportgenerator-globaltool
+    
     - name: Test
       run: dotnet test -c Release -l "console;verbosity=normal" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=../../coverlet/coverage.xml
     
