--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -53,4 +53,4 @@ jobs:
       uses: actions/upload-artifact@v1.0.0
       with:
         name: CoverageReport # Artifact name        
-        path: coveragereport # Directory containing files to upload
+        path: coverlet/summary # Directory containing files to upload
